# youdao-dict

./: .gitignore  CHANGELOG.md  Cargo.toml  HELP.md  README.md  desktop
desktop/: YDict.desktop  youdao-dict.desktop
scripts/: install.sh  uninstall.sh
src/: main.rs
src/gui/: about.rs  appMenu.rs  constants.rs  mod.rs  runtimeState.rs  startQt.rs  systemTray.rs  usage.rs
src/gui/clip/: clipboard.rs  clipboardPhrase.rs  clipboardResult.rs  mod.rs
src/gui/opt/: mod.rs  optLine.rs
src/gui/result/: mod.rs  phrase.rs  pronounce.rs  transResult.rs
src/gui/text/: mod.rs  transText.rs
src/structs/: engConciseInfo.rs  mod.rs  webTrans.rs  zhConciseInfo.rs
src/utils/: audio.rs  datetime.rs  mod.rs  request.rs  resultParse.rs
