[package]
name = "youdao-dict"
version = "0.1.0"
authors = ["taohan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_widgets = "0.5.0"
qt_ui_tools = "0.5.0"


reqwest = { version = "0.10.6", features = ["blocking", "json", "cookies"] }
tokio = { version = "0.2", features = ["full"] }
# rustc-serialize = "0.3.24"
# https://www.qttc.net/509-rust-parse-json.html
serde = "1.0.114"
serde_json = "1.0.56"
futures = "0.3.5"
url = "2.1.1"
regex = "1.3.9"