[package]
name = "youdao-dict"
version = "0.2.0"
authors = ["DreamSaddle"]
edition = "2018"


[dependencies]
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_widgets = "0.5.0"
qt_ui_tools = "0.5.0"


reqwest = { version = "0.10.6", features = ["blocking", "json", "cookies"] }
tokio = { version = "0.2", features = ["full"] }
# https://www.qttc.net/509-rust-parse-json.html
serde = "1.0.114"
serde_json = "1.0.56"
futures = "0.3.5"
url = "2.1.1"
regex = "1.3.9"